--- a/readme
+++ b/readme
@@ -1,1 +1,4 @@
-If you want to run this program on your pc, you need to download Qt. If you open this as a project, nothing should malfunction.
+If you want to run this program on your pc, you need to download Qt.
+You can download Qt from this link https://www.qt.io/download-open-source.
+If you open this as a project, nothing should malfunction.
+Have fun!
