--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
 If you want to run this program on your pc, you need to download Qt.
 You can download Qt from this link https://www.qt.io/download-open-source.
-If you open this as a project, nothing should malfunction.
+I highly recommend downloading the rar file. Unzip it and open it as a project in Qt. Nothing should malfunction.
 Have fun!
